feat: jdk21 + virtual threads + langgraph4j poc + cleanup
- 升级 JDK 17 → 21 LTS（pom.xml java.version）
- 7 个模块启用虚拟线程（spring.threads.virtual.enabled=true）
- 10 个线程池/Executor 替换为 VT：
  · Tomcat、@Async、@Scheduled 由全局开关接管
  · taskExecutor/scheduledTaskExecutor/asyncRouteExecutor 删除（VT 替代）
  · routerParallelAgentExecutor → Executors.newVirtualThreadPerTaskExecutor()
  · toolExecutor (SmartReActAgent) → Executors.newVirtualThreadPerTaskExecutor()
  · TravelStreamController.executor → Thread.ofVirtual().start()
  · CompletableFuture (GeneralTools) → VT_EXECUTOR
- 仅保留 asyncEmbeddingExecutor（CPU 密集，平台线程池）
- ThreadLocal + synchronized 清理（VT 前置条件）：
  · ToolLogContext: ThreadLocal → MDC-only
  · ChineseTokenizer: 移除未使用的 ThreadLocal 字段
  · RequestQueueService: synchronized ×4 → ReentrantLock
  · ConversationDocumentService: synchronized → Caffeine<ReentrantLock>
  · SmartReActAgent: synchronized(this) → ReentrantLock
- @Async('xxxExecutor') → @Async（无参，VT 接管）
- RouterService: 移除未使用的 routerParallelAgentExecutor 注入
- LangGraph4j POC：StateGraph + PostgresSaver + ChatClient 调用链路
- 删除无用脚本/目录: convert-bge-to-onnx.py, BOOT-INF, a2a-consumer, food-service, router-service, travel-service
- README 更新：JDK 21/VT 徽章、技术栈修正、近期升级章节